# CAOS_RES_CardioPINN

./: .gitignore  CHANGELOG.md  LICENSE  README.md  STRUCTURE.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-pages.yml
data/: README.md
data-pipeline/: README.md  requirements.txt
data-pipeline/cardiopinnlab/: __init__.py  pipeline.py  registry.py
deploy/: pages.md
docs/: README.md  architecture.md  data-contract.md  frameworks.md  guides.md
docs/architecture/: 01_overview.md  02_two-offline-lanes.md  03_analytic-gates.md  04_determinism-and-reproducibility.md  05_deploy.md
docs/cases/: act-eikonal-mapping.md  active-sensing.md  af-phase-rotor.md  amortized-operator.md  delta-pinn-geometry.md  fiber-conductivity-inverse.md  flow4d-ns-pressure.md  inverse-ecgi.md  joint-cv-scar-uq.md  pa-pressure-1dns.md  real-ecgi-edgar.md  real-flow4d-pressure.md
docs/data-contract/: 01_ecgi-input-contract.md  02_4dflow-input-contract.md  03_derived-trace-contract.md
docs/frameworks/: 01_numpy-scipy.md  02_pytorch.md  03_pydicom.md  05_uplot.md  (+1 more)
frontend/: copy-data.mjs  index.html  local8.mjs  package-lock.json  package.json
manuscripts/: .gitignore
models/: active-sensing.onnx  fiber-conductivity-inverse.onnx  flow4d-ns-pressure.onnx  inverse-ecgi.onnx  joint-cv-scar-uq.onnx
scripts/: README.md  check_artifacts.py
tests/: conftest.py  test_artifacts.py  test_bake.py  test_contract.py  test_ecgi_bem.py  test_flow4d_analytic_source.py  test_flow4d_ppe.py  test_flow4d_spacetime.py  test_flow4d_trace.py  test_manifest.py  test_real_ecgi.py
(+148 files in other folders)
