# CardioPINN offline engine package (ADR-0057). Physics-informed neural networks for cardiac electrophysiology
# and cardiovascular medicine. The heavy GPU deps (torch, ...) live in data-pipeline/requirements.txt; the
# package metadata here lists only the light deps needed to import the contracts + run the pure-python tests.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cardiopinnlab"
# PEP 440 form of the display version X.XX.XXX (see CHANGELOG.md + cardiopinnlab.__version__).
version = "0.15.0"
description = "CardioPINN: physics-informed neural networks for cardiac electrophysiology and cardiovascular medicine (offline pipeline)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Felipe Santibanez-Leal" }]
dependencies = ["numpy>=2.0,<2.3", "scipy>=1.13"]

[tool.setuptools.packages.find]
where = ["data-pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: full GPU bake (skipped unless torch + a GPU are available)"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
# E702: compact multiple-statement lines (semicolons) are intentional in the numeric assembly code.
ignore = ["E702"]
